# Gladis

./: .flake8  Makefile  pyproject.toml
.github/workflows/: ci-cd.yaml
